1999-10-08  Paul D. Smith  <psmith@gnu.org>

	* variable.c (initialize_file_variables): Always recurse to
	initialize the parent's file variables: the parent might not have
	any rules to run so it might not have been initialized before
	this--we need this to set up the chain properly for
	target-specific variables.

1999-09-23  Paul D. Smith  <psmith@gnu.org>

	* Version 3.78.1 released.

	* make.texinfo: Update version/date stamp.

	* main.c (main): Argh.  For some reason we were closing _all_ the
	jobserver pipes before we re-exec'd due to changed makefiles.
	This means that any re-exec got a "jobserver unavailable" error :-/.
	I can't believe we didn't notice this before.

1999-09-22  Paul D. Smith  <psmith@gnu.org>

	* Version 3.78 released.

	* main.c (main): Only fail on multiple --jobserver-fds options if
	they aren't all the same.  Some makefiles use things like
	$(MAKE) $(MFLAGS) which will cause multiple, identical copies of
	--jobserver-fds to show up.

1999-09-16  Paul D. Smith  <psmith@gnu.org>

	* main.c (define_makeflags): Zero out FLAGSTRING to avoid
	uninitialized memory reads when checking *p != '-' in the loop.

1999-09-15  Paul D. Smith  <psmith@gnu.org>

	* Version 3.77.97 released.

	* configure.in (MAKE_HOST): AC_SUBST this so it will go into the
	makefile.
	* Makefile.am (check-local): Print a success banner if the check
	succeeds.
	(check-regression): A bit of fine-tuning.

1999-09-15  Eli Zaretskii  <eliz@is.elta.co.il>

	* README.DOS.template: Document requirements for the test suite.
	* Makefile.DOS.template: Updates to allow the test suite to run
	from "make check".

	* main.c (main): Handle it if argv[0] isn't an absolute path.

1999-09-13  Paul D. Smith  <psmith@gnu.org>

	* Version 3.77.96 released.

	* Makefile.am (loadavg): Use CPPFLAGS, etc. to make sure we get
	all the right #defines to compile.
	(check-regression): Look for the regression test suite in the make
	package itself.  If we're building remotely, use symlinks to make